# SG14

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
Docs/: Fixed_Point_Library_Proposal.md  fixed_point.md  plf_licensing.txt  plf_nanotimer readme.txt  plf_readme.txt
Docs/Proposals/: D0447R10 - Introduction of colony to the Standard Library.html  D0447R11 - Introduction of colony to the Standard Library.html  D0447R12 - Introduction of colony to the Standard Library.html  D0447R13 - Introduction of colony to the Standard Library.html  D0447R14 - Introduction of colony to the Standard Library.html  D0447R15 - Introduction of colony to the Standard Library.html  D0447R15 - Introduction of hive to the Standard Library.html  D0447R16 - Introduction of hive to the Standard Library.html  D0447R4  - Introduction of colony to the standard library.htm  D0447R6 - Introduction of std_colony to the standard library.htm  D0447R7 - Introduction of colony to the Standard Library.htm  D0447R7 - Introduction of std_colony to the standard library.htm  D0447R8 - Introduction of colony to the Standard Library.htm  Fixed_Point_Library_Proposal.md  Nonallocatingstandardfunctions.md  P0447R4  - Introduction of std_colony to the standard library.htm  P0447R6 - Introduction of std_colony to the standard library.htm  P0447R7 - Introduction of std_colony to the Standard Library.htm  P0661r2.md  colony.htm  colony_proposal.htm  p0037.html  plf_stack.html  plf_stack_proposal.htm  rawstorage.html  ring_feedback.html  ring_feedback.md  ring_proposal_r5.tex  segmented_stack.htm  uninitialized.html  unstable_remove.html
Docs/plflib documentation - local cached copy - may become out of date/: chained_group_allocation_pattern.htm  colony.htm  colony_benchmark_msvc_results.htm  index.htm  jump_counting_skipfield_pattern.htm  nanotimer.htm  plf_colony_algorithm.htm  plf_stack_algorithm.htm  robots.txt  size_doubling_memory_block_allocation.htm  skipfield_comparison.htm  stack.htm  stack_all_gcc_results.htm  stack_all_msvc_results.htm  stack_all_results.htm  stack_benchmark_msvc_results.htm  stack_benchmark_msvc_results_c2d.htm  stack_msvc_results.htm  style.css
Proposals/ComparingVirtualMethods/: cpp_entity_example.sln  cs_func_sort.sln
Proposals/ComparingVirtualMethods/Docs/: ComparingVirtualMethods.docx  ComparingVirtualMethods.txt  datatable.xlsx
Proposals/ComparingVirtualMethods/Docs/ASM_listing/: FastUpdateExampleTimers.txt  MethodPointerUpdateExampleTimers.txt  SlowComplicatedUpdateExample.txt  SlowUpdateExample.txt
Proposals/ComparingVirtualMethods/cpp/: helloworld.cpp
Proposals/ComparingVirtualMethods/cpp_entity_example/: CMakeLists.txt  clean.sh  cpp_entity_example.cpp  cpp_entity_example.vcxproj  cpp_entity_example.vcxproj.filters  disassemble.txt  entity.h  hermite.cpp  hermite.h  lerp.cpp  lerp.h  make_disassemble.sh  make_sub.sh  stdafx.h
Proposals/ComparingVirtualMethods/cs_func_sort/: Program.cs  cs_func_sort.csproj
Proposals/ComparingVirtualMethods/cs_func_sort/Properties/: AssemblyInfo.cs
SG14/: SG14.vcxproj  SG14.vcxproj.filters  algorithm_ext.h  fixed_point.h  flat_map.h  flat_map_jointstorage.h  flat_set.h  hotset.h  hotsettest.cpp  inplace_function.h  plf_colony.h  plf_stack.h  ring.h  ring_queue.h  rolling_queue.h  slot_map.h  structured_binding_traits.h  transcode.h
SG14_test/: SG14_test.cpp  SG14_test.h  SG14_test.vcxproj  SG14_test.vcxproj.filters  fixed_point_test.cpp  flat_map_jointstorage_test.cpp  flat_map_test.cpp  flat_set_test.cpp  inplace_function_test.cpp  main.cpp  plf_benchmark.cpp  plf_colony_test.cpp  plf_colony_test_suite.cpp  plf_nanotimer.h  plf_stack_test_suite.cpp  plf_test_suite.cpp  ring_test.cpp  slot_map_test.cpp  structured_binding_traits_test.cpp  transcode_test.cpp  uninitialized.cpp  uninitialized_test.cpp  unstable_remove_test.cpp
SG14_test/plf_benchmark_suite/: plf_bench readme.txt  plf_bench.h  plf_booled_deque.h  plf_indexed_vector.h  plf_licensing.txt  plf_nanotimer.h  plf_nanotimer_readme.txt  plf_packed_deque.h  plf_pointer_deque.h
SG14_test/plf_benchmark_suite/individual_tests/colony/comparitive_testing/: booled_deque_small_struct.cpp  deque_bool_small_struct.cpp  indexed_vector_small_struct.cpp  packed_deque.cpp  plf_colony_bool_small_struct.cpp  plf_colony_small_struct.cpp  pointer_deque_small_struct.cpp  std_list_small_struct.cpp  vector_bool_small_struct.cpp
SG14_test/plf_benchmark_suite/individual_tests/colony/general_use_testing/: deque_bool.cpp  indexed_vector.cpp  packed_deque.cpp  plf_colony.cpp  pointer_deque.cpp  std_list.cpp  std_map.cpp
SG14_test/plf_benchmark_suite/individual_tests/colony/referencer_testing/: packed_deque.cpp  plf_colony.cpp
SG14_test/plf_benchmark_suite/individual_tests/stack/: plf_stack_char.cpp  plf_stack_double.cpp  plf_stack_int.cpp  plf_stack_large_struct.cpp  plf_stack_small_struct.cpp  std_stack_char.cpp  std_stack_double.cpp  std_stack_int.cpp  std_stack_large_struct.cpp  std_stack_small_struct.cpp  std_vector_char.cpp  std_vector_double.cpp  std_vector_int.cpp  std_vector_large_struct.cpp  std_vector_small_struct.cpp
VS2015/: .gitignore
VS2015/SG14/: SG14.sln
VS2015/SG14/SG14/: SG14.vcxproj  SG14.vcxproj.filters
VS2015/SG14/SG14_test/: SG14_test.vcxproj  SG14_test.vcxproj.filters  main.cpp  ring_test.cpp  unstable_remove_test.cpp
XCode/SG14.xcworkspace/: contents.xcworkspacedata
XCode/SG14.xcworkspace/xcshareddata/: SG14.xccheckout
XCode/SG14.xcworkspace/xcuserdata/guy.xcuserdatad/: UserInterfaceState.xcuserstate
XCode/SG14/SG14.xcodeproj/: project.pbxproj
XCode/SG14_test/: main.cpp
XCode/SG14_test/SG14_test.xcodeproj/: project.pbxproj
cmake/: .gitignore  CMakeLists.txt  main.cpp
cpp_entity_example/cpp_entity_example/: ReadMe.txt  hermite.cpp  lerp.h  stdafx.cpp
cpp_entity_example/cpp_entity_example/Debug/: cpp_entity_example.pch
cpp_entity_example/cpp_entity_example/x64/Debug/: cpp_entity_example.pch
cpp_entity_example/cpp_entity_example/x64/Release/: cpp_entity_example.pch
cpp_entity_example/x64/Release/: cpp_entity_example.iobj
(+63 files in other folders)
